--- a/RandomIdeas-API/package.json
+++ b/RandomIdeas-API/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.4.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "webpack-cli": "^5.1.4"
   }
 }
